@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2000-4  R Development Core Team
+ *  Copyright (C) 2000-8  R Development Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -76,7 +76,7 @@ int rcmdfn (int cmdarg, int argc, char **argv)
        set R_SHARE_DIR as env variable
        set PATH to include R_HOME\bin
        set PERL5LIB to %R_SHARE_DIR%/perl;%Perl5LIB%
-       set TEXINPUTS to %R_SHARE_DIR%/texmf;%TEXINPUTS%
+       set TEXINPUTS to .;%R_SHARE_DIR%/texmf;%TEXINPUTS%
        set HOME if unset
        launch %R_HOME%\bin\$*
      */
@@ -274,7 +274,7 @@ int rcmdfn (int cmdarg, int argc, char **argv)
 	if ( (p = getenv("PERL5LIB")) ) strcat(PERL5LIB, p);
 	putenv(PERL5LIB);
 
-	strcpy(TEXINPUTS, "TEXINPUTS=");
+	strcpy(TEXINPUTS, "TEXINPUTS=.;");
 	strcat(TEXINPUTS, RHome); strcat(TEXINPUTS, "\\share\\texmf;");
 	if ( (p = getenv("TEXINPUTS")) ) strcat(TEXINPUTS, p);
 	putenv(TEXINPUTS);
